# credit-ocr-backend

./: .env.template  .gitignore  README.md  docker-compose.yml  hello.py  pyproject.toml  pytest.ini  requirements.txt  run.py  run_api.py  run_tests.py  schema.sql  start.sh
config/: README.md  application.conf  azure.conf  database.conf  document_types.conf  ollama.conf  redis.conf
notebooks/: credit_ocr_pipeline.ipynb  excel_to_azure_db.ipynb  ocr_results.xlsx
notebooks/demo_data/Demo Tech GmbH/: 0036f59d-43cb-4d31-9d81-a90148f9bdc7_ocr_results.xlsx
notebooks/demo_data/Hotel zur Taube/: 170fd3e3-62e9-4779-b8ae-0bc81a8aa126_ocr_results.xlsx  81e1a236-7ca1-452b-8ef6-4ade61a71bba_ocr_results.xlsx  a40cece5-efaf-4eb0-be32-e458dd798388_ocr_results.xlsx
notebooks/docs/ImmoWelt25/: 60b5665b-8eab-487d-8687-ea3b86b46fbb_ocr_results.xlsx
src/: config.py  document_config.py  main.py
src/api/: main.py
src/config/: document_types.conf
src/creditsystem/: storage.py
src/dms_mock/: environment.py  service.py
src/llm/: client.py  field_extractor.py
src/ocr/: azure_ocr_client.py  extraction.py  postprocess.py  storage.py
src/tasks/: celery_app.py  pipeline_tasks.py
src/visualization/: pdf_visualizer.py
tests/: conftest.py  test_api.py  test_azure_ocr_client.py  test_dms_mock.py  test_extraction.py  test_field_extraction.py  test_mock_ocr_results.py  test_ocr_storage.py  test_pipeline_tasks.py  test_postprocess_label_extraction.py  test_storage.py  test_visualization.py
tests/environment/: environment.py  ollama.py
tests/resources/: document_types.conf  test_application.conf
