[project]
name = "credit-ocr-demo-backend"
version = "0.1.0"
description = "Backend for credit request OCR demo"
authors = [
    {name = "Markus Kuehnle"},
]
dependencies = [
    "azure-ai-formrecognizer>=3.3.3",
    "azure-storage-blob>=12.19.0",
    "dotenv>=0.9.9",
    "psycopg2-binary>=2.9.9",
    "pyhocon>=0.3.61",
    "pytest>=8.4.0",
    "testcontainers>=4.10.0",
    "pytest-asyncio>=0.23.5",
    "aiohttp>=3.9.3",
    "pytest-ordering>=0.6",
    "pdf2image>=1.17.0",
    "Pillow>=10.2.0",
    "reportlab>=4.4.1",
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "pymupdf>=1.26.1",
    "celery[redis]>=5.4.0",
    "redis>=5.0.7",
    "testcontainers-redis==0.0.1rc1",
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.3",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "psutil>=7.0.0",
]
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/credit_ocr_demo_backend"]

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "no_global_setup: disables global ollama setup for DMS mock tests"
]

[tool.supervisord]
nodaemon=true
logfile="/var/log/supervisor/supervisord.log"

[tool.supervisord.program.postgres]
command="/usr/lib/postgresql/15/bin/postgres -D /var/lib/postgresql/data"
user="postgres"
autostart=true
autorestart=true
stdout_logfile="/var/log/supervisor/postgres.log"
stderr_logfile="/var/log/supervisor/postgres_err.log"
environment="PGDATA=/var/lib/postgresql/data"

[tool.supervisord.program.azurite]
command="azurite --location /data/azurite --blobHost 0.0.0.0"
autostart=true
autorestart=true
stdout_logfile="/var/log/supervisor/azurite.log"
stderr_logfile="/var/log/supervisor/azurite_err.log"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
# Core dependencies
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.3"}
pydantic = "^2.9.0"
python-multipart = "^0.0.9"
# Database
sqlalchemy = "^2.0.33"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
# Azure
azure-storage-blob = "^12.21.0"
azure-identity = "^1.17.1"
azure-ai-formrecognizer = "^3.3.3"
# Configuration
pyhocon = "^0.3.62"
# Testcontainers
testcontainers = {extras = ["postgres", "redis"], version = "^4.8.0"}
# DMS Mock
requests = "^2.32.3"
# LLM
aiohttp = "^3.9.5"
# Celery
celery = "^5.4.0"
redis = "^5.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-ordering = "^0.6"
pytest-asyncio = "^0.23.8"
ruff = "^0.5.5"
anyio = "^4.4.0"
httpx = "^0.27.0"
testcontainers-redis = "^0.0.1"
